--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Kishore Kota
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
-url: https://agileengineer.github.io
+url: https://kishorekota.github.io
 
 plugins:
  - jekyll-seo-tag
