--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Kishore Kota
 description: A starter template for a Jeykll site using the Just the Docs theme!
-theme: just-the-docs
+theme: "just-the-docs"
 google_analytics: KISHOREKKOTA AWS CONNECT BIAN MICROSERVICES KAFKA NODEJS
 
 url: https://kishorekota.github.io
