--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ url: https://kishorekota.github.io
 plugins:
   - jekyll-seo-tag
   - jekyll-default-layout
+
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
