--- a/kube_ckad/role_binding.yaml
+++ b/kube_ckad/role_binding.yaml
@@ -8,5 +8,5 @@ subjects:
     apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: dev-user
+  name: developer
   apiGroup: rbac.authorization.k8s.io
