--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ plugins:
 kramdown:
   input: GFM
   syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    disable: true
 
 # Custom CSS
 sass:
